--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "description": "project structure initial file（Out-of-the-box）， react+ts+tailwind+webpck5+eslint+router+mui+jotai",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "client:dev": "webpack --config config/webpack/webpack.dev.js",
+    "client:server": "webpack serve --config config/webpack/webpack.dev.js",
+    "client:prod": "webpack --mode production config/webpack/webpack.prod.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "html-webpack-plugin": "^5.6.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "typescript": "^5.6.3",
     "webpack": "^5.96.1",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
   }
 }
