--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@swc/core": "^1.8.0",
+    "swc-loader": "^0.2.6",
     "typescript": "^5.6.3",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
