--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "project structure initial file（Out-of-the-box）， react+ts+tailwind+webpck5+eslint+router+mui+jotai",
   "main": "index.js",
   "scripts": {
-    "clent:dev": "webpack --config config/webpack/webpack.dev.js",
+    "client:dev": "webpack --config config/webpack/webpack.dev.js",
     "client:server": "webpack serve --config config/webpack/webpack.dev.js",
     "client:prod": "webpack --config config/webpack/webpack.prod.js"
   },
@@ -17,11 +17,17 @@
   },
   "devDependencies": {
     "@swc/core": "^1.8.0",
+    "autoprefixer": "^10.4.20",
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.3",
+    "postcss": "^8.4.47",
+    "postcss-loader": "^8.1.1",
+    "style-loader": "^4.0.0",
     "swc-loader": "^0.2.6",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0",
-    "html-webpack-plugin": "^5.6.3"
+    "webpack-dev-server": "^5.1.0"
   }
 }
