--- a/.swcrc
+++ b/.swcrc
@@ -37,12 +37,6 @@
     "exclude": [
       "node_modules",
       "dist",
-      ".next",
-      "out",
-      "build",
-      "coverage",
-      "\\.test\\.[jt]sx?$",
-      "\\.spec\\.[jt]sx?$",
-      "\\.stories\\.[jt]sx?$"
+      ".git"
     ]
   }
