--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@swc/core": "^1.8.0",
