--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "swc-loader": "^0.2.6",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3",
+    "vconsole": "^3.15.1",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
