--- a/.swcrc
+++ b/.swcrc
@@ -22,7 +22,7 @@
       "keepClassNames": true,
       "baseUrl": "./",
       "paths": {
-        // "@/*": ["src/*"]
+        "@/*": ["src/*"]
       }
     },
     "module": {
