--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "^5.6.3",
     "vconsole": "^3.15.1",
     "webpack": "^5.96.1",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
   }
