--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@welldone-software/why-did-you-render": "^8.0.3",
     "autoprefixer": "^10.4.20",
     "css-loader": "^7.1.2",
+    "css-minimizer-webpack-plugin": "^7.0.0",
     "html-webpack-plugin": "^5.6.3",
     "postcss": "^8.4.47",
     "postcss-loader": "^8.1.1",
     "style-loader": "^4.0.0",
     "swc-loader": "^0.2.6",
     "tailwindcss": "^3.4.14",
+    "terser-webpack-plugin": "^5.3.10",
     "typescript": "^5.6.3",
     "vconsole": "^3.15.1",
     "webpack": "^5.96.1",
