--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "client:dev": "webpack --config config/webpack/webpack.dev.js",
     "client:server": "webpack serve --config config/webpack/webpack.dev.js",
-    "client:prod": "webpack --config config/webpack/webpack.prod.js"
+    "client:prod": "webpack --config config/webpack/webpack.prod.js",
+    "analyze": "cross-env ANALYZE=true npm run client:prod"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +25,7 @@
     "@swc/core": "^1.8.0",
     "@welldone-software/why-did-you-render": "^8.0.3",
     "autoprefixer": "^10.4.20",
+    "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
     "html-webpack-plugin": "^5.6.3",
