--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "client:dev": "webpack --config config/webpack/webpack.dev.js",
     "client:server": "webpack serve --config config/webpack/webpack.dev.js",
     "client:prod": "webpack --config config/webpack/webpack.prod.js",
-    "analyze": "cross-env ANALYZE=true npm run client:prod"
+    "analyze": "cross-env ANALYZE=true npm run client:prod",
+    "lint:fix": "tsc --noEmit & eslint ./src --fix",
+    "lint": "eslint ./src"
   },
   "keywords": [],
   "author": "",
@@ -22,12 +24,16 @@
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.14.0",
     "@swc/core": "^1.8.0",
     "@welldone-software/why-did-you-render": "^8.0.3",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
+    "eslint": "^9.14.0",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.12.0",
     "html-webpack-plugin": "^5.6.3",
     "postcss": "^8.4.47",
     "postcss-loader": "^8.1.1",
@@ -36,6 +42,7 @@
     "tailwindcss": "^3.4.14",
     "terser-webpack-plugin": "^5.3.10",
     "typescript": "^5.6.3",
+    "typescript-eslint": "^8.13.0",
     "vconsole": "^3.15.1",
     "webpack": "^5.96.1",
     "webpack-bundle-analyzer": "^4.10.2",
