jest安装与配置

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,7 +41,9 @@
       "src/**/*.ts",
       "src/**/*.tsx",
       "src/**/*.js",
-      "src/**/*.jsx"
+      "src/**/*.jsx",
+      "tests/**/*.ts",
+      "tests/**/*.js"
     ],
     "exclude": [
       "node_modules",
