--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "client:prod": "webpack --config config/webpack/webpack.prod.js",
     "analyze": "cross-env ANALYZE=true npm run client:prod",
     "lint:fix": "tsc --noEmit & eslint ./src --fix",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +27,8 @@
   "devDependencies": {
     "@eslint/js": "^9.14.0",
     "@swc/core": "^1.8.0",
+    "@swc/jest": "^0.2.37",
+    "@types/jest": "^29.5.14",
     "@welldone-software/why-did-you-render": "^8.0.3",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
@@ -35,6 +38,7 @@
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.12.0",
     "html-webpack-plugin": "^5.6.3",
+    "jest": "^29.7.0",
     "postcss": "^8.4.47",
     "postcss-loader": "^8.1.1",
     "style-loader": "^4.0.0",
