--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "analyze": "cross-env ANALYZE=true npm run client:prod",
     "lint:fix": "tsc --noEmit & eslint ./src --fix",
     "lint": "eslint ./src",
-    "test": "jest"
+    "test": "jest --collectCoverage --reporters default jest-stare"
+  },
+  "jest-stare": {
+    "coverageLink": "../jest-coverage/lcov-report/index.html",
+    "resultDir": "docs/jest-stare"
   },
   "keywords": [],
   "author": "",
@@ -39,6 +43,7 @@
     "globals": "^15.12.0",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
+    "jest-stare": "^2.5.2",
     "postcss": "^8.4.47",
     "postcss-loader": "^8.1.1",
     "style-loader": "^4.0.0",
