--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "analyze": "cross-env ANALYZE=true npm run client:prod",
     "lint:fix": "tsc --noEmit & eslint ./src --fix",
     "lint": "eslint ./src",
-    "test": "jest --collectCoverage --reporters default jest-stare"
+    "test": "jest --collectCoverage --reporters default jest-stare",
+    "test:e2e": "cypress open"
   },
   "jest-stare": {
     "coverageLink": "../jest-coverage/lcov-report/index.html",
@@ -38,6 +39,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
+    "cypress": "^13.15.2",
     "eslint": "^9.14.0",
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.12.0",
