--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint:fix": "tsc --noEmit & eslint ./src --fix",
     "lint": "eslint ./src",
     "test": "jest --collectCoverage --reporters default jest-stare",
-    "test:e2e": "cypress open"
+    "test:e2e": "cypress open",
+    "test:ui": "majestic"
   },
   "jest-stare": {
     "coverageLink": "../jest-coverage/lcov-report/index.html",
@@ -46,6 +47,7 @@
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
     "jest-stare": "^2.5.2",
+    "majestic": "^1.8.1",
     "postcss": "^8.4.47",
     "postcss-loader": "^8.1.1",
     "style-loader": "^4.0.0",
