--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@swc/core": "^1.8.0",
     "@swc/jest": "^0.2.37",
     "@types/jest": "^29.5.14",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@welldone-software/why-did-you-render": "^8.0.3",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
