--- a/package.json
+++ b/package.json
@@ -35,8 +35,11 @@
     "@swc/core": "^1.8.0",
     "@swc/jest": "^0.2.37",
     "@types/jest": "^29.5.14",
+    "@types/node": "^22.9.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
     "@welldone-software/why-did-you-render": "^8.0.3",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
@@ -45,10 +48,12 @@
     "cypress": "^13.15.2",
     "eslint": "^9.14.0",
     "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "globals": "^15.12.0",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
     "jest-stare": "^2.5.2",
+    "jsonc-eslint-parser": "^2.4.0",
     "majestic": "^1.8.1",
     "postcss": "^8.4.47",
     "postcss-loader": "^8.1.1",
