--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@eslint/js": "^9.14.0",
     "@swc/core": "^1.8.0",
+    "@swc/helpers": "^0.5.15",
     "@swc/jest": "^0.2.37",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.9.1",
