--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 docs/
 cypress/
+.env
 # Logs
 logs
 *.log
@@ -8,6 +9,7 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
+
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
